static/results-style.css
body {
  background-image: url("images/background-image.png");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  color: #e0e0e0;
  font-family: 'Segoe UI', sans-serif;
}

.content-wrap {
  width: fit-content;
  margin: 0 auto;
}

/* Begin header style */
.page-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 1.5%;
  margin-bottom: 0px;
}

.spotify-icon {
  width: 40px;
  height: 40px;
}

.logo-link {
  display: flex;
  align-items: center;
  gap: 10px;
  text-decoration: none;
  color: inherit;
}

.website-title {
  display: flex;
  align-items: center;
  justify-content: left;
  gap: 10px;
}

.highlight {
  color: #65D56E;
}

.plus-icon {
  width: 40px;
  height: 40px;
  color: #65D56E;
  flex-shrink: 0;
  display: block;
}

.new-analysis-btn {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  white-space: nowrap;

  height: 25px;
  padding: 8px 22px;
  border-radius: 999px;

  background: #1F1E1E;
  color: #e0e0e0;
  text-decoration: none;
  font-size: 16px;
  font-weight: 800;
  line-height: 1;
  cursor: pointer;

  border: none;
  box-shadow: 0 0px 10px #65D56E;
  transition: all 0.3s ease;
}

.new-analysis-btn:hover {
  box-shadow: 0 0px 18px #65D56E;
}

.new-analysis-btn:active {
  transform: scale(0.97);
}
/* End header style */

/* Begin page title style */
.page-title {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  gap: 10px;
  margin-top: 15px;
  margin-bottom: 30px;
}

h1 { /* Highlight "Results" in page title */
  font-size: 54px;
  color: white;
  margin: 0;
}
/* End page title style */

/* Begin results page style */
.listening-stats-top {
  display: flex;
  justify-content: center;
  align-items: stretch;
  gap: 50px;
  padding: 0;
  flex-wrap: wrap;
}

.icon {
  width: 36px;
  height: 36px;
  color: #65D56E;
  margin-bottom: 18px;
}

.label {
  margin: 0 0 10px;
  font-size: 14px;
  font-weight: 700;
  letter-spacing: 0.04em;
  text-transform: uppercase;
  color: #a5a5a5;
}

.minutes-pill, .plays-pill {
  display: inline-flex;
  align-items: center;
  gap: 8px;
  padding: 10px 14px;
  border-radius: 999px;
  background: #333232;
  color: #f0f0f0;
  font-size: 15px;
  font-weight: 700;
}

.plays-pill {
  margin-left: 10px;
}

.minutes-pill svg, .plays-pill svg {
  width: 16px;
  height: 16px;
}

.pills {
  display: flex;
  align-items: center;
}

/* Begin top artist, song, and day general style */
.artist-card, .song-card, .day-card {
  width: fit-content;
  min-width: 280px;
  max-width: 400px;
  border-radius: 20px;
  padding: 22px 24px;
  position: relative;
  color: #fff;
  background: #1F1E1E;
  box-shadow: 0 0px 10px #65D56E;
}

.artist-content, .song-content {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  gap: 15px;
}

.day-content {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.artist, .song, .day {
  max-width: 520px; 
  margin: 0 0 18px;
  font-size: 22px;
  font-weight: 800;
  color: #65D56E;
  word-wrap: break-word;
  white-space: normal;
  overflow-wrap: break-word;
}

.artist-avatar-wrap, .song-avatar-wrap {
  position: relative;
  width: 94px;
  height: 94px;
  flex-shrink: 0;
  top: 4px;
}

.day-avatar-wrap {
  position: relative;
  width: 94px;
  height: 94px;
  flex-shrink: 0;
}

.artist-avatar, .song-avatar, .day-avatar {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  overflow: hidden;
  border: none;
  box-shadow: 0 0px 8px #65D56E;
}

.artist-avatar img, .song-avatar img, .day-avatar img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  display: block;
}
/* End top artist, song, and day general style */

/* Begin top song specific style */
.song-avatar {
  border-radius: 10%;
}

.song-left {
  flex: 1;
  min-width: 0;
}
/* End top song specific style */

/* Begin top day specific style */
.day-avatar {
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 10%;
  text-align: center;
}

.day-avatar-text {
  display: flex;
  flex-direction: column;
  align-items: center;

  transform: translateY(4px);
}

.top-weekday {
  font-size: 16px;
  font-weight: 700;
  color: #65D56E;
  letter-spacing: 1px;
}

.top-day {
  font-size: 36px;
  font-weight: 800;
  color: #e0e0e0;
}
/* End top day specific style */

